# rag-chatbot

./: .env.example  README.md  pyproject.toml
notebooks/: kaggle.ipynb  voicebot-erax-vlm.ipynb
rag_chatbot/core/embedding/: embedding.py
rag_chatbot/core/ingestion/: ingestion.py
rag_chatbot/core/model/: model.py
rag_chatbot/setting/: setting.py
rag_chatbot/ui/: ui.py
